@@ -1,5 +1,10 @@
 2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 
 
+	* Banter/VideoView.cs: Fixed the size so it looks good
+	* Banter/ChatWindow.cs: Fixed up avatar support
+
+2007-07-08  Calvin Gaisford <calvinrg@gmail.com> 
+
 	* Banter/ChatWindow.cs: Added code to handle video if we already have
 	  video stuff runnning
 
